<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/score_view"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:id="@+id/name_edit"/>

            <Button
                android:id="@+id/score_submit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/submit_score"/>

            <Button
                android:id="@+id/score_share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/share_button_text"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/leaders_names"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="22sp"
                android:padding="10dp">

            </TextView>

            <TextView
                android:id="@+id/leaders_scores"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textSize="22sp"
                android:padding="10dp">

            </TextView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
